--- a/.gitignore
+++ b/.gitignore
@@ -194,4 +194,6 @@ cython_debug/
 .cursorindexingignore
 
 Raw Data/
+imdb_data/
+ott-analytics-engine-e19e2285920a.json
 OTT Content Analytics.docx
