--- a/.github/workflows/deploy-dags.yml
+++ b/.github/workflows/deploy-dags.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy-dags.yml
 name: Deploy DAGs and Streaming Pipeline
 
 on:
@@ -49,17 +48,31 @@ jobs:
   deploy-dataflow:
     runs-on: ubuntu-latest
     needs: deploy-dags
-    # Only run if scripts/streaming directory has changed
-    if: contains(github.event.head_commit.modified, 'scripts/streaming/') || contains(github.event.head_commit.added, 'scripts/streaming/')
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2  # Needed for git diff to work
+    
+    - name: Check for streaming changes
+      id: check-changes
+      run: |
+        # Check if any files in scripts/streaming/ were modified
+        if git diff --name-only HEAD^ HEAD | grep -q 'scripts/streaming/'; then
+          echo "::set-output name=has_changes::true"
+          echo "Streaming files modified - proceeding with deployment"
+        else
+          echo "::set-output name=has_changes::false"
+          echo "No streaming files modified - skipping deployment"
+        fi
     
     - name: Setup GCP Credentials
+      if: steps.check-changes.outputs.has_changes == 'true'
       run: |
         echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > /tmp/gcp-credentials.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-credentials.json" >> $GITHUB_ENV
     
     - name: Setup gcloud CLI
+      if: steps.check-changes.outputs.has_changes == 'true'
       uses: google-github-actions/setup-gcloud@v0
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
@@ -67,9 +80,11 @@ jobs:
         export_default_credentials: true
     
     - name: Authenticate Docker to GCR
+      if: steps.check-changes.outputs.has_changes == 'true'
       run: gcloud auth configure-docker
     
     - name: Create Setup Scripts
+      if: steps.check-changes.outputs.has_changes == 'true'
       run: |
         # Create BigQuery events table
         pip install google-cloud-bigquery
@@ -80,6 +95,7 @@ jobs:
         python scripts/setup/create_pubsub_topics.py
     
     - name: Submit Cloud Build
+      if: steps.check-changes.outputs.has_changes == 'true'
       env:
         PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         REGION: ${{ secrets.GCP_REGION }}
