--- a/.github/workflows/deploy-dags.yml
+++ b/.github/workflows/deploy-dags.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - 'dags/**'
       - 'scripts/streaming/**'
+      - 'scripts/setup/**'
+      - 'cloudbuild.yaml'
 
 jobs:
   deploy-dags:
@@ -47,32 +49,21 @@ jobs:
 
   deploy-dataflow:
     runs-on: ubuntu-latest
-    needs: deploy-dags
+    # This job doesn't need to depend on deploy-dags
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 2  # Needed for git diff to work
     
-    - name: Check for streaming changes
-      id: check-changes
-      run: |
-        # Check if any files in scripts/streaming/ were modified
-        if git diff --name-only HEAD^ HEAD | grep -q 'scripts/streaming/'; then
-          echo "::set-output name=has_changes::true"
-          echo "Streaming files modified - proceeding with deployment"
-        else
-          echo "::set-output name=has_changes::false"
-          echo "No streaming files modified - skipping deployment"
-        fi
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
     
     - name: Setup GCP Credentials
-      if: steps.check-changes.outputs.has_changes == 'true'
       run: |
         echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > /tmp/gcp-credentials.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-credentials.json" >> $GITHUB_ENV
     
     - name: Setup gcloud CLI
-      if: steps.check-changes.outputs.has_changes == 'true'
       uses: google-github-actions/setup-gcloud@v0
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
@@ -80,30 +71,29 @@ jobs:
         export_default_credentials: true
     
     - name: Authenticate Docker to GCR
-      if: steps.check-changes.outputs.has_changes == 'true'
       run: gcloud auth configure-docker
     
-    - name: Create Setup Scripts
-      if: steps.check-changes.outputs.has_changes == 'true'
+    - name: Setup Environment
       run: |
-        # Create BigQuery events table
-        pip install google-cloud-bigquery
+        # Install dependencies
+        pip install google-cloud-bigquery google-cloud-pubsub
+        
+        # Create BigQuery events table if it doesn't exist
         python scripts/setup/create_events_tables.py
         
-        # Create Pub/Sub topics and subscriptions
-        pip install google-cloud-pubsub
+        # Create Pub/Sub topics and subscriptions if they don't exist
         python scripts/setup/create_pubsub_topics.py
     
     - name: Submit Cloud Build
-      if: steps.check-changes.outputs.has_changes == 'true'
       env:
         PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         REGION: ${{ secrets.GCP_REGION }}
-        PROCESSED_BUCKET: ${{ secrets.PROCESSED_DATA_BUCKET }}
+        PROCESSED_DATA_BUCKET: ${{ secrets.PROCESSED_DATA_BUCKET }}
       run: |
+        # Use the variable name that matches what's in cloudbuild.yaml
         gcloud builds submit \
           --config=cloudbuild.yaml \
-          --substitutions=_PROCESSED_BUCKET=${PROCESSED_BUCKET} \
+          --substitutions=_PROCESSED_DATA_BUCKET=${PROCESSED_DATA_BUCKET} \
           .
     
     - name: Test Event Simulator
